서버 -> 클라 위치 정보 전송 완료
클라 키 입력에 따라 위치를 계산 및 변경해 클라에게 전달

--- a/TriumServer/TriumServer.vcxproj
+++ b/TriumServer/TriumServer.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="OVER_PLUS.cpp" />
     <ClCompile Include="SESSION.cpp" />
     <ClCompile Include="Tem_server.cpp" />
+    <ClCompile Include="Vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ENUM.h" />
@@ -31,6 +32,7 @@
     <ClInclude Include="protocol.h" />
     <ClInclude Include="SESSION.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Vec3.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
