--- a/TriumServer/TriumServer.vcxproj.filters
+++ b/TriumServer/TriumServer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="SESSION.cpp">
       <Filter>Class</Filter>
     </ClCompile>
+    <ClCompile Include="Vec3.cpp">
+      <Filter>Class</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -51,6 +54,9 @@
       <Filter>Class</Filter>
     </ClInclude>
     <ClInclude Include="SESSION.h">
+      <Filter>Class</Filter>
+    </ClInclude>
+    <ClInclude Include="Vec3.h">
       <Filter>Class</Filter>
     </ClInclude>
   </ItemGroup>
